Change to avoid jumping button

--- a/css/base.css
+++ b/css/base.css
@@ -54,7 +54,7 @@ button.sidebar {
 button.sidebar:focus{
   width: 100%;
   border-radius: 5px 0px 0px 5px;
-  border-style:none;
+  border-color: var(--color--salmon);
   color: white;
   background-color: var(--color--salmon);
 }
